// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BillingUsage/> should display danger progress bar 1`] = `
<div
  class="usage-progress progress"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="63"
    class="progress-bar progressBar"
    role="progressbar"
    style="width: 63%;"
  />
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="37"
    class="progress-bar remainingProgressBar isDanger"
    role="progressbar"
    style="width: 37%;"
  />
</div>
`;

exports[`<BillingUsage/> should display loader 1`] = `
<div
  class="container"
>
  <div
    class="inner"
    style="min-height: 500px;"
  >
    <i
      class="icon-custom icon-circle-o-notch md-spin"
      style="font-size: 40px;"
    />
  </div>
</div>
`;

exports[`<BillingUsage/> should display price 1`] = `
<div
  class="wrapper"
>
  <h4
    class="header"
  >
    <i
      class="icon material-icons"
    >
      insert_chart
    </i>
    Usage & Plans
  </h4>
  <div
    class="card-group card-group"
  >
    <div
      class="card-current-plan card card"
    >
      <div
        class="card-title current-plan-title pro card-title"
      >
        <div
          class="planTitle"
        >
          Pro monthly plan
        </div>
        <div
          class="badge"
        >
          CURRENT PLAN
        </div>
      </div>
      <div
        class="card-body card-body"
        data-candu-id="billing-subscription-usage"
      >
        <div>
          <div
            class="ticket-numbers"
          >
            1,000
            /
            2,000
             tickets
             
            <a
              id="current-period"
            >
              <i
                class="material-icons text-muted"
              >
                info_outline
              </i>
            </a>
          </div>
          <div
            class="usage-progress progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="50"
              class="progress-bar progressBar"
              role="progressbar"
              style="width: 50%;"
            />
          </div>
          <div
            class="flex justify-content-between"
          >
            <div>
              $
              10
               extra cost
            </div>
            <div>
              <strong>
                Usage reset on:
              </strong>
               
              Oct 11
            </div>
          </div>
        </div>
        <div
          class="description"
        >
          <div>
            Your current subscription started on
             
            <strong>
              Aug 23
            </strong>
          </div>
          <button
            class="wrapper fill primary medium"
            type="button"
          >
            Update plan
          </button>
        </div>
      </div>
    </div>
    <div
      class="card automation-card col-lg-4 card"
    >
      <div
        class="card-title card-title"
      >
        Automation
        <div
          class="amountWrapper automation-amount"
        >
          <span
            class="amount"
          >
            <b>
              $180
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
      <div
        class="card-body automation-card-body card-body"
      >
        <div
          class="description"
        >
          <p>
            Leverage the power of 
            <b>
              self-service
            </b>
             to answer customers 
            <b>
              quickly, 24/7
            </b>
            . Activate self-tracking, return & cancel order flows, and custom report issue workflows!
          </p>
        </div>
        <div
          class="upgrade-button"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <button
              class="wrapper fill primary medium"
              type="button"
            >
              <span
                class="wrapper"
              >
                Subscribe
                <i
                  class="material-icons icon isRight medium"
                >
                  auto_awesome
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    If you have any questions or if you want to unsubscribe, please contact us at
     
    <a
      class="link"
      href="mailto:support@gorgias.com"
    >
      support@gorgias.com
    </a>
     
    or
     
    <a
      class="link"
      href=""
    >
      Live Chat
    </a>
    .
  </p>
</div>
`;

exports[`<BillingUsage/> should display tooltip 1`] = `
<div
  class="tooltip-inner"
  role="tooltip"
>
  Number of tickets included in your current plan VS total number of tickets used between:
  <br />
  Oct 10
   and 
  Oct 11
</div>
`;

exports[`<BillingUsage/> should display warning progress bar 1`] = `
<div
  class="usage-progress progress"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="progress-bar progressBar isWarning"
    role="progressbar"
    style="width: 100%;"
  />
</div>
`;

exports[`<BillingUsage/> should load with empty props 1`] = `
<div
  class="wrapper"
>
  <h4
    class="header"
  >
    <i
      class="icon material-icons"
    >
      insert_chart
    </i>
    Usage & Plans
  </h4>
  <div
    class="card-group card-group"
  >
    <div
      class="card-current-plan card card"
    >
      <div
        class="card-title current-plan-title pro card-title"
      >
        <div
          class="planTitle"
        >
          Pro monthly plan
        </div>
        <div
          class="badge"
        >
          CURRENT PLAN
        </div>
      </div>
      <div
        class="card-body card-body"
        data-candu-id="billing-subscription-usage"
      >
        <div>
          <div
            class="ticket-numbers"
          >
            1,000
            /
            2,000
             tickets
             
            <a
              id="current-period"
            >
              <i
                class="material-icons text-muted"
              >
                info_outline
              </i>
            </a>
          </div>
          <div
            class="usage-progress progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="50"
              class="progress-bar progressBar"
              role="progressbar"
              style="width: 50%;"
            />
          </div>
          <div
            class="flex justify-content-between"
          >
            <div>
              $
              10
               extra cost
            </div>
            <div>
              <strong>
                Usage reset on:
              </strong>
               
              Oct 11
            </div>
          </div>
        </div>
        <div
          class="description"
        >
          <div>
            Your current subscription started on
             
            <strong>
              Aug 23
            </strong>
          </div>
          <button
            class="wrapper fill primary medium"
            type="button"
          >
            Update plan
          </button>
        </div>
      </div>
    </div>
    <div
      class="card automation-card col-lg-4 card"
    >
      <div
        class="card-title card-title"
      >
        Automation
        <div
          class="amountWrapper automation-amount"
        >
          <span
            class="amount"
          >
            <b>
              $180
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
      <div
        class="card-body automation-card-body card-body"
      >
        <div
          class="description"
        >
          <p>
            Leverage the power of 
            <b>
              self-service
            </b>
             to answer customers 
            <b>
              quickly, 24/7
            </b>
            . Activate self-tracking, return & cancel order flows, and custom report issue workflows!
          </p>
        </div>
        <div
          class="upgrade-button"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <button
              class="wrapper fill primary medium"
              type="button"
            >
              <span
                class="wrapper"
              >
                Subscribe
                <i
                  class="material-icons icon isRight medium"
                >
                  auto_awesome
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    If you have any questions or if you want to unsubscribe, please contact us at
     
    <a
      class="link"
      href="mailto:support@gorgias.com"
    >
      support@gorgias.com
    </a>
     
    or
     
    <a
      class="link"
      href=""
    >
      Live Chat
    </a>
    .
  </p>
</div>
`;
